# antani

./: README.md  package-lock.json
backend/: .gitignore  Cargo.toml  env  perf.data.old
backend/migrations/: 20220324094509_dataset.sql  20220324094518_schoolholidays.sql  20220324094521_stations.sql  20220324094531_weather.sql  20220324205711_occupancy.sql
backend/src/: api.rs  api.rs.backup2  api.rs.backup3  filters.rs.backuip  handlers.rs.backup  main.rs  utils.rs
backend/src/db/: mod.rs  queries.rs  types.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  index.tsx  proxy.conf.json  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.module.ts  sbb.module.ts
frontend/src/app/answer/: answer.component.html  answer.component.scss  answer.component.ts
frontend/src/app/description/: description.component.html  description.component.scss
frontend/src/app/holydays/: holydays.component.html  holydays.component.ts
frontend/src/app/meteo/: meteo.component.html  meteo.component.scss  meteo.component.ts
frontend/src/app/request/: request.component.html  request.component.scss  request.component.ts
frontend/src/app/request-answer-component/: request-answer-component.component.html  request-answer-component.component.spec.ts  request-answer-component.component.ts
frontend/src/app/stations/: stations.component.html  stations.component.ts
frontend/src/app/trains/: api_schema.json  train_interface.ts  trains.component.html  trains.component.scss  trains.component.ts
(+1 files in other folders)
